# xinemap

./: CHANGELOG.md  CLAUDE.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
dglml_server/: app.py  cli.py
docs/design/: 01-dv2-workflow.md  02-ux-design.md  03-ui-visual-spec.md  04-backend-architecture.md
plans/: clever-nibbling-castle.md
public/: CNAME
src/: App.tsx  index.css  version.ts
src/components/: ChangelogPage.tsx  CommandPalette.tsx  ExportDialog.tsx  FileDialog.tsx  HistoryDialog.tsx  InlineDialog.tsx  SourceConfigDialog.tsx  StatusBar.tsx  Toolbar.tsx  ViewControlsBar.tsx  ViewModeCycleButton.tsx  ViewModeSegmented.tsx
src/diagram/: DiagramPanel.tsx  EREdge.tsx  EnumNode.tsx  FocusEditPanel.tsx  FocusModal.tsx  StubNode.tsx  TableNode.tsx  dv2Colors.ts  edgeHandles.ts  focusGraph.ts  layoutEngine.ts  orthogonalPath.ts  snapAlign.ts
src/editor/: EditorPanel.tsx  dbmlLanguage.ts  dbmlTableReplace.ts  scaffolding.ts
src/export/: exportDV4dbt.test.ts  exportDV4dbt.ts  exportPng.ts  exportSnowflake.ts
src/hooks/: useParseEffect.ts
src/parser/: conceptualToFlow.ts  dbmlToFlow.ts  entityTypeFromNote.test.ts  entityTypeFromNote.ts  exportSql.ts  parseDbml.ts
src/persistence/: gitStorage.ts  localStorage.ts
src/store/: useDiagramStore.ts  useEditorStore.ts  useProjectStore.ts  useSourceConfigStore.ts  useThemeStore.ts  useUiStore.ts
src/tabular/: TableGrid.tsx  TabularPanel.tsx  filterTablesByGroup.test.ts  (+1 more)
tests/: test_app.py  test_cli.py  test_dbt_endpoints.py
xinemap_server/: app.py  cli.py
(+17 files in other folders)
