[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xinemap"
version = "0.1.0"
description = "Data Vault 2.0 DBML diagram editor — served locally"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.24.0",
]

[project.scripts]
xinemap = "xinemap_server.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["xinemap_server"]

[tool.hatch.build.targets.wheel.force-include]
"dist" = "xinemap_server/static"
